<resources>
    <string name="app_name">Cheddar Tracker</string>
    <string name="stock_symbol">Stock Symbol</string>
    <string name="shares">Number of Shares</string>
    <string name="buy_price">Price per Share</string>
    <string name="sell_price">Sell Price</string>
    <string name="fees">Fees</string>
    <string name="option_type">Option Type</string>
    <string name="option_type_call">Call</string>
    <string name="option_type_put">Put</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="add_position">Add</string>
    <string name="check_portfolio">Check My Portfolio</string>
</resources>