<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPosition">

    <EditText
        android:id="@+id/stock_symbol"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/stock_symbol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/number_stocks"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/shares"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_symbol" />

    <EditText
        android:id="@+id/stock_purchase_price"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:hint="@string/buy_price"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_stocks" />

    <EditText
        android:id="@+id/stock_sell_price"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:hint="@string/sell_price"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_purchase_price" />

    <EditText
        android:id="@+id/fees"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:hint="@string/fees"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_sell_price" />

    <!--    <TextView-->
    <!--        android:id="@+id/option_type"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="100dp"-->
    <!--        android:layout_marginTop="24dp"-->
    <!--        android:textSize="18sp"-->
    <!--        android:text="@string/option_type"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/stock_sell_price"-->
    <!--        app:layout_constraintVertical_bias="0.056" />-->

    <!--    <TableRow-->
    <!--        android:layout_width="fill_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="100dp"-->
    <!--        android:layout_marginTop="24dp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/option_type">-->

    <!--        <com.google.android.material.checkbox.MaterialCheckBox-->
    <!--            android:id="@+id/option_type_call"-->
    <!--            android:layout_width="fill_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_weight="1.0"-->
    <!--            android:text="@string/option_type_call">-->

    <!--        </com.google.android.material.checkbox.MaterialCheckBox>-->

    <!--        <com.google.android.material.checkbox.MaterialCheckBox-->
    <!--            android:id="@+id/option_type_put"-->
    <!--            android:layout_width="fill_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_weight="1.0"-->
    <!--            android:text="@string/option_type_put">-->

    <!--        </com.google.android.material.checkbox.MaterialCheckBox>-->
    <!--    </TableRow>-->


    <Button
        android:id="@+id/stocks_purchase_date_button"
        style="?android:spinnerStyle"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:onClick="showDatePickerDialog"
        android:hint="@string/purchase_date"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fees" />

    <Button
        android:id="@+id/add_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="56dp"
        android:onClick="addPosition"
        android:text="@string/add_position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stocks_purchase_date_button" />

</androidx.constraintlayout.widget.ConstraintLayout>